<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDiaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextDiaryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/edit_diary_title"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/editTextDiaryDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/edit_diary_description"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="6"
            />

        <Button
            android:id="@+id/saveButton"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/add_button"
            android:textColor="@android:color/primary_text_dark" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>